current styling for main and user page. Fixed margin/overflow in header

--- a/src/app/components/duckie-main-page/duckie-main-page.component.css
+++ b/src/app/components/duckie-main-page/duckie-main-page.component.css
@@ -5,13 +5,12 @@
   }
   
   .left {
-    background-color: grey;
     width: 25%;
     }
 
   .right {
       width: 50%;
-      background-color: lightcoral;
+      border: black solid 3px;
       overflow-y: scroll;
   }
   
