--- a/src/app/components/user-page/user-page.component.css
+++ b/src/app/components/user-page/user-page.component.css
@@ -1,11 +1,31 @@
+
 .top_bar {
-    
-        width: 50%;
+        width: calc(50% - 1em);
         position: fixed;   
         background: #333;
         padding-left: 1em;
-        padding-top: 1em;
         top: 0;
         color: #fff;
+        margin-bottom: 1em;
+}
+
+h1 {
+    font-size: x-large;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.profile {
+     width: 100%;
+     height: 350px;
+}
+
+.button_bar{
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    justify-content: space-around;
+    font-size: large;
+    border: black solid 2px;
+
 }
 
